fixed menu spacing

--- a/css/StylesSimpleDropDownMenu.css
+++ b/css/StylesSimpleDropDownMenu.css
@@ -54,10 +54,10 @@
 #dropdownmenu .dropdown-content {
   display: none;
   position: absolute;
-  right: 0px;
-  top: 30px;  /* top of menu list */
+  right: 0em;
+  top: 1.7em;  /* top of menu list */
   background-color: #f9f9f9;
-  min-width: 160px;
+  min-width: 10em;
   box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
   z-index: 1;
   border: 2px solid saddlebrown;
